# grpc_client_server

./: README.md
game_area/: CMakeLists.txt
game_area/src/: game_area_mgr.cpp  game_area_mgr.h  session_client.h
game_common/grpc/: common_service_client.cpp  common_service_client.h  grpc_client.h  grpc_server.h  grpc_server_call.h
protos/: scene_area_service.grpc.pb.cc  scene_area_service.grpc.pb.h  scene_area_service.pb.cc  scene_area_service.pb.h  scene_area_service.proto
